fixed home page

--- a/views/listings/info.ejs
+++ b/views/listings/info.ejs
@@ -89,7 +89,7 @@
                 <div class="row">
                     <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12 offset-lg-2 offset-md-2 offset-sm-0 offset-xs-0">
                         <h3>All Reviews</h3>
-                        <div class="row row-cols-lg-1 row-cols-md-1 row-cols-sm-1 row-cols-xs-1">
+                        <!-- <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12 offset-lg-2 offset-md-2 offset-sm-0 offset-xs-0"> -->
                             <%for(reviewData of data.review){%>
                                 <div class="card review-card mb-3 ms-2">
                                     <div class="card-body ms-2">
@@ -106,7 +106,7 @@
                                     </div>
                                 </div>
                                 <%}%>
-                        </div>
+                        <!-- </div> -->
                     </div>
                 </div>
                     <%}%>
